tests/fixtures/invalid/static_local_out_of_scope.c
int main() {
    {
        static int hidden = 1;
        hidden += 1;
    }
    return hidden;
}
